testcases/error/invalid_select_after_range.veryl
module invalid_select_after_range {
    var a: logic<8>;
    let _b: logic = a[3:0][0];
}
